Co-authored-by: Guilherme Gabriel Restio <Guuil4@users.noreply.github.com>

--- a/front/pages/anuncios.html
+++ b/front/pages/anuncios.html
@@ -3,41 +3,32 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../styles/styles.css" />
     <title>Lista de Anúncios</title>
-    <style>
-      .anuncio {
-        border: 1px solid #ddd;
-        margin: 10px;
-        padding: 10px;
-        border-radius: 5px;
-        box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-      }
-      .anuncio img {
-        max-width: 100%;
-        height: auto;
-        border-radius: 5px;
-      }
-    </style>
   </head>
   <body>
-    <h1>Lista de Anúncios</h1>
+    <h1>Adicionar Anúncios</h1>
     <div id="anuncios"></div>
 
     <!-- Formulário para adicionar anúncio -->
     <form id="adicionarAnuncioForm" enctype="multipart/form-data">
-      <label for="modelo">Modelo:</label>
-      <input type="text" id="modelo" name="modelo" required />
-      <label for="marca">Marca:</label>
-      <input type="text" id="marca" name="marca" required />
-      <label for="ano">Ano:</label>
-      <input type="number" id="ano" name="ano" required />
-      <label for="preco">Preço:</label>
-      <input type="number" id="preco" name="preco" required />
-      <label for="descricao">Descrição:</label>
-      <textarea id="descricao" name="descricao" required></textarea>
-      <label for="imagens">Imagens:</label>
-      <input type="file" id="imagens" name="imagens" multiple />
-      <button type="submit">Adicionar Anúncio</button>
+      <section class="addAnuncio">
+        <label for="modelo">Modelo:</label>
+        <input type="text" id="modelo" name="modelo" required />
+        <label for="marca">Marca:</label>
+        <input type="text" id="marca" name="marca" required />
+        <label for="ano">Ano:</label>
+        <input type="number" id="ano" name="ano" required />
+        <label for="preco">Preço:</label>
+        <input type="number" id="preco" name="preco" required />
+        <label for="descricao">Descrição:</label>
+        <textarea id="descricao" name="descricao" required></textarea>
+        <label for="imagens">Imagens:</label>
+        <input type="file" id="imagens" name="imagens" multiple />
+        <button type="submit" href="./marketplace.html">
+          Adicionar Anúncio
+        </button>
+      </section>
     </form>
 
     <script>
