--- a/front/pages/marketplace.html
+++ b/front/pages/marketplace.html
@@ -1,34 +1,83 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lista de Anúncios</title>
-    <style>
-      .anuncio {
-        border: 1px solid #ddd;
-        margin: 10px;
-        padding: 10px;
-        border-radius: 5px;
-        box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-      }
-      .anuncio img {
-        max-width: 100%;
-        height: auto;
-        border-radius: 5px;
-        margin: 5px 0;
-      }
-      .anuncio .imagens {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 10px;
-      }
-    </style>
-  </head>
-  <body>
-    <h1>Lista de Anúncios</h1>
-    <div id="anuncios"></div>
+    <!-- Seção do cabeçalho do documento -->
 
+    <meta charset="UTF-8" />
+    <!-- Define o conjunto de caracteres como UTF-8, que é um padrão para suportar a maioria dos caracteres e símbolos -->
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Define o viewport para garantir que a página seja dimensionada corretamente em dispositivos móveis -->
+
+    <title>Document</title>
+    <!-- Define o título da página que aparece na aba do navegador -->
+
+    <link rel="stylesheet" href="../styles/styles.css" />
+    <!-- Link para um arquivo CSS externo que contém estilos para a página. O caminho relativo sugere que o arquivo está em um diretório acima na pasta "styles" -->
+
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+    <!-- Link para a biblioteca Boxicons, que fornece ícones para uso no documento. O atributo "rel" especifica que é uma folha de estilo -->
+
+    <script src="../script/scripts.js" defer></script>
+    <!-- Link para um arquivo JavaScript externo. O atributo "defer" faz com que o script seja executado após a página ter sido completamente carregada -->
+  </head>
+
+  <!-- Seção principal do corpo da página -->
+  <body>
+    <header class="header">
+      <!-- Seção de cabeçalho, geralmente contém o logo e a navegação principal -->
+
+      <a href="../index.html" class="logo"> </a>
+      <!-- Um link que representa o logotipo da página. O atributo "href" está vazio, então não leva a lugar nenhum -->
+
+      <input type="checkbox" id="check" />
+      <!-- Um checkbox que provavelmente é usado para ativar/desativar um menu móvel -->
+
+      <label for="check" class="icons">
+        <!-- Um rótulo que controla o checkbox. O atributo "for" está associado ao ID do checkbox -->
+
+        <i class="bx bx-menu" id="menu-icon"></i>
+        <!-- Um ícone de menu fornecido pela biblioteca Boxicons, visível quando o menu está fechado -->
+
+        <i class="bx bx-x" id="close-icon"></i>
+        <!-- Um ícone de fechar fornecido pela biblioteca Boxicons, visível quando o menu está aberto -->
+      </label>
+
+      <nav class="navbar">
+        <!-- Navegação principal do site -->
+
+        <a style="--i: 1" href="../index.html">Home</a>
+        <!-- Link para a página inicial do site -->
+
+        <a style="--i: 2" href="./pages/marketplace.html">Marketplace</a>
+        <!-- Link para a página do marketplace -->
+
+        <a style="--i: 3" href="">About</a>
+        <!-- Link para a seção "Sobre" (não tem um destino definido) -->
+
+        <a style="--i: 4" href="">Contact</a>
+        <!-- Link para a seção "Contato" (não tem um destino definido) -->
+
+        <a style="--i: 5" href="">Login</a>
+        <!-- Link para a seção "Login" (não tem um destino definido) -->
+      </nav>
+    </header>
+
+    <section class="">
+      <div class="opacity">
+        <section class="Titulo">
+          <!-- Seção de conteúdo da página -->
+          <a href="anuncios.html">adicionar-anuncio</a>
+          <!-- Título da seção com o texto "Marketplace" -->
+        </section>
+        <h2>Lista de Anúncios:</h2>
+
+        <div id="anuncios"></div>
+      </div>
+    </section>
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         fetch("http://localhost:3000/anuncios")
@@ -60,6 +109,7 @@
               anuncioElement.classList.add("anuncio");
 
               anuncioElement.innerHTML = `
+            
           <h2>${anuncio.modelo} (${anuncio.ano})</h2>
           <p><strong>Marca:</strong> ${anuncio.marca}</p>
           <p><strong>Preço:</strong> R$ ${precoFormatado.toFixed(2)}</p>
@@ -67,6 +117,7 @@
           <div class="imagens">
             ${imagensHtml}
           </div>
+         
         `;
 
               anunciosContainer.appendChild(anuncioElement);
@@ -78,4 +129,6 @@
       });
     </script>
   </body>
+</div>
+</section>
 </html>
