--- a/front/index.html
+++ b/front/index.html
@@ -64,7 +64,7 @@
         <a style="--i: 4" href="">Contact</a>
         <!-- Link para a seção "Contato" (não tem um destino definido) -->
 
-        <a style="--i: 5" href="./pages/login.html">Login</a>
+        <a style="--i: 5" href="../front/pages/cadastro.html">Cadastro</a>
         <!-- Link para a seção "Login" (não tem um destino definido) -->
       </nav>
     </header>
