--- a/front/pages/cadastro.html
+++ b/front/pages/cadastro.html
@@ -71,7 +71,7 @@
               required
             />
           </div>
-          <button type="submit">CADASTRAR!</button>
+          <button type="submit" href="../index.html">CADASTRAR!</button>
         </form>
       </div>
     </div>
