--- a/front/pages/marketplace.html
+++ b/front/pages/marketplace.html
@@ -61,7 +61,7 @@
         <a style="--i: 4" href="">Contact</a>
         <!-- Link para a seção "Contato" (não tem um destino definido) -->
 
-        <a style="--i: 5" href="">Login</a>
+        <a style="--i: 5" href="./cadastro.html">Login</a>
         <!-- Link para a seção "Login" (não tem um destino definido) -->
       </nav>
     </header>
